document.write() substituido por innerHTML

--- a/freebie.html
+++ b/freebie.html
@@ -398,7 +398,7 @@
             </div>
             <hr>
             <div class="copyright">
-                 © <script> document.write(new Date().getFullYear()) </script> Creative Tim, made with love
+                 <!-- © <script> document.write(new Date().getFullYear()) </script> Creative Tim, made with love -->
             </div>
         </div>
     </footer>
