--- a/freebie.html
+++ b/freebie.html
@@ -34,7 +34,7 @@
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
         as="script">
-    <link rel="preload" href="assets/js/gaia.js" as="script">
+    <!-- <link rel="preload" href="assets/js/gaia.js" as="script"> -->
 
     <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
 </head>
@@ -556,6 +556,6 @@
     crossorigin="anonymous"></script>
 
 <!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
-<script type="text/javascript" src="assets/js/gaia.js"></script>
+<script type="text/javascript" src="assets/js/gaia_min.js"></script>
 
 </html>
